force-app/main/default/objects/AccountContactJunction__c/AccountContactJunction__c.object-meta.xml
<CustomObject>
    <description>Account contact junction object</description>
    <label>Lawyer</label>
    <nameField>
        <label>Lawyer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lawyers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>