force-app/main/default/objects/AccountContactJunction__c/fields/Account_Contact_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Account Contact External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>