force-app/main/default/objects/AccountContactJunction__c/fields/ContactExtID__c.field-meta.xml
<CustomField>
    <fullName>ContactExtID__c</fullName>
    <formula>Contact__r.ContactID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactExtID</label>
    <type>Text</type>
</CustomField>