force-app/main/default/objects/AccountContactJunction__c/fields/First_Policy_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Policy_Date__c</fullName>
    <label>First Policy Date</label>
    <type>Date</type>
</CustomField>