force-app/main/default/objects/AccountContactJunction__c/fields/Latest_Application__c.field-meta.xml
<CustomField>
    <fullName>Latest_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Application</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Lawyers (Latest Application)</relationshipLabel>
    <relationshipName>Lawyers1</relationshipName>
    <type>Lookup</type>
</CustomField>