force-app/main/default/objects/AccountContactJunction__c/fields/Latest_Policy__c.field-meta.xml
<CustomField>
    <fullName>Latest_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Lawyers</relationshipLabel>
    <relationshipName>Lawyers</relationshipName>
    <type>Lookup</type>
</CustomField>