force-app/main/default/objects/AccountContactJunction__c/fields/Latest_Policy_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Policy_Effective_Date__c</fullName>
    <formula>Latest_Policy__r.Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Policy Effective Date</label>
    <type>Date</type>
</CustomField>