force-app/main/default/objects/AccountContactJunction__c/fields/Latest_Policy_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Policy_Expiration_Date__c</fullName>
    <formula>Latest_Policy__r.Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Policy Expiration Date</label>
    <type>Date</type>
</CustomField>