force-app/main/default/objects/AccountContactJunction__c/fields/Lawyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Name__c</fullName>
    <formula>Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.Middle_Name__c &amp; &quot; &quot; &amp; Contact__r.LastName &amp; &quot; &quot; &amp; Contact__r.Suffix__c</formula>
    <label>Lawyer Name</label>
    <type>Text</type>
</CustomField>