force-app/main/default/objects/AccountContactJunction__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <formula>IF(ISNULL(Account__r.Primary_Contact__c ), False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>